Added minimal permission for 'purview retentionlabel' commands. Closes #6987

--- a/docs/docs/cmd/purview/retentionlabel/retentionlabel-set.mdx
+++ b/docs/docs/cmd/purview/retentionlabel/retentionlabel-set.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # purview retentionlabel set
 
@@ -50,6 +52,17 @@ m365 purview retentionlabel set [options]
 This command is based on a Microsoft Graph API that is currently in preview and is subject to change once the API reached general availability.
 
 :::
+
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                     |
+  |-----------------|---------------------------------|
+  | Microsoft Graph | RecordsManagement.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
 
 ## Examples
 
