--- a/docs/docs/cmd/purview/retentionlabel/retentionlabel-add.mdx
+++ b/docs/docs/cmd/purview/retentionlabel/retentionlabel-add.mdx
@@ -59,6 +59,17 @@ This command is based on a Microsoft Graph API that is currently in preview and 
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                     |
+  |-----------------|---------------------------------|
+  | Microsoft Graph | RecordsManagement.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Create a retention label that retains documents and deletes them after one year.
