--- a/docs/docs/cmd/purview/retentionlabel/retentionlabel-get.mdx
+++ b/docs/docs/cmd/purview/retentionlabel/retentionlabel-get.mdx
@@ -29,9 +29,20 @@ This command is based on a Microsoft Graph API that is currently in preview and 
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                |
+  |-----------------|----------------------------|
+  | Microsoft Graph | RecordsManagement.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
-Get a retention label
+Get a retention label.
 
 ```sh
 m365 purview retentionlabel get --id c37d695e-d581-4ae9-82a0-9364eba4291e
