--- a/docs/docs/cmd/purview/sensitivitylabel/sensitivitylabel-policysettings-list.mdx
+++ b/docs/docs/cmd/purview/sensitivitylabel/sensitivitylabel-policysettings-list.mdx
@@ -38,6 +38,24 @@ When operating in app-only mode, you have the option to use either the `userName
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                      |
+  |-----------------|----------------------------------|
+  | Microsoft Graph | InformationProtectionPolicy.Read |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                      |
+  |-----------------|----------------------------------|
+  | Microsoft Graph | InformationProtectionPolicy.Read |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get a list of policy settings for a sensitivity label.
