Added extra text to --message option

--- a/docs/docs/cmd/spo/site/site-accessrequest-setting-set.mdx
+++ b/docs/docs/cmd/spo/site/site-accessrequest-setting-set.mdx
@@ -26,7 +26,7 @@ m365 spo site accessrequest setting set [options]
 : Send access requests to a specific email. Specify either `disabled`, `ownerGroup`, or `email`.
 
 `--message [message]`
-: Add a custom message to the access request page.
+: Add a custom message to the access request page. Cannot be used with the `--disabled` option.
 ```
 
 <Global />
