Least privileged permissions

--- a/docs/docs/cmd/graph/directoryextension/directoryextension-get.mdx
+++ b/docs/docs/cmd/graph/directoryextension/directoryextension-get.mdx
@@ -37,16 +37,16 @@ m365 graph directoryextension get [options]
 <Tabs>
   <TabItem value="Delegated">
 
-  | Resource        | Permissions        |
-  |-----------------|--------------------|
-  | Microsoft Graph | Directory.Read.All |
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
 
   </TabItem>
   <TabItem value="Application">
 
-  | Resource        | Permissions        |
-  |-----------------|--------------------|
-  | Microsoft Graph | Directory.Read.All |
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
 
   </TabItem>
 </Tabs>
