--- a/docs/docs/cmd/graph/directoryextension/directoryextension-list.mdx
+++ b/docs/docs/cmd/graph/directoryextension/directoryextension-list.mdx
@@ -41,16 +41,16 @@ https://learn.microsoft.com/en-us/graph/api/application-list-extensionproperty?v
 <Tabs>
   <TabItem value="Delegated">
 
-  | Resource        | Permissions        |
-  |-----------------|--------------------|
-  | Microsoft Graph | Directory.Read.All |
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
 
   </TabItem>
   <TabItem value="Application">
 
-  | Resource        | Permissions        |
-  |-----------------|--------------------|
-  | Microsoft Graph | Directory.Read.All |
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
 
   </TabItem>
 </Tabs>
