--- a/docs/docs/cmd/graph/directoryextension/directoryextension-add.mdx
+++ b/docs/docs/cmd/graph/directoryextension/directoryextension-add.mdx
@@ -43,16 +43,16 @@ m365 graph directoryextension add [options]
 <Tabs>
   <TabItem value="Delegated">
 
-  | Resource        | Permissions             |
-  |-----------------|-------------------------|
-  | Microsoft Graph | Directory.ReadWrite.All |
+  | Resource        | Permissions               |
+  |-----------------|---------------------------|
+  | Microsoft Graph | Application.ReadWrite.All |
 
   </TabItem>
   <TabItem value="Application">
 
-  | Resource        | Permissions             |
-  |-----------------|-------------------------|
-  | Microsoft Graph | Directory.ReadWrite.All |
+  | Resource        | Permissions                   |
+  |-----------------|-------------------------------|
+  | Microsoft Graph | Application.ReadWrite.OwnedBy |
 
   </TabItem>
 </Tabs>
