--- a/docs/docs/cmd/graph/openextension/openextension-get.mdx
+++ b/docs/docs/cmd/graph/openextension/openextension-get.mdx
@@ -44,7 +44,7 @@ m365 graph openextension get [options]
   |-----------------|-----------------------|
   | Microsoft Graph | User.Read.All         |
   | Microsoft Graph | Group.Read.All        |
-  | Microsoft Graph | Device.ReadWrite.All  |
+  | Microsoft Graph | Device.Read.All       |
   | Microsoft Graph | Organization.Read.All |
 
   </TabItem>
