--- a/docs/docs/cmd/graph/openextension/openextension-list.mdx
+++ b/docs/docs/cmd/graph/openextension/openextension-list.mdx
@@ -41,7 +41,7 @@ m365 graph openextension list [options]
   |-----------------|-----------------------|
   | Microsoft Graph | User.Read.All         |
   | Microsoft Graph | Group.Read.All        |
-  | Microsoft Graph | Device.ReadWrite.All  |
+  | Microsoft Graph | Device.Read.All       |
   | Microsoft Graph | Organization.Read.All |
 
   </TabItem>
