--- a/docs/docs/cmd/entra/oauth2grant/oauth2grant-list.mdx
+++ b/docs/docs/cmd/entra/oauth2grant/oauth2grant-list.mdx
@@ -27,6 +27,23 @@ In order to list existing OAuth2 permissions granted to a service principal, you
 
 When using the text output type (default), the command lists only the values of the `objectId`, `resourceId` and `scope` properties of the OAuth grant. When setting the output type to JSON, all available properties are included in the command output.
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions        |
+  |-----------------|--------------------|
+  | Microsoft Graph | Directory.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions        |
+  |-----------------|--------------------|
+  | Microsoft Graph | Directory.Read.All |
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 List OAuth2 permissions granted to service principal with `objectId` _b2307a39-e878-458b-bc90-03bc578531d6_.
