--- a/docs/docs/cmd/purview/sensitivitylabel/sensitivitylabel-list.mdx
+++ b/docs/docs/cmd/purview/sensitivitylabel/sensitivitylabel-list.mdx
@@ -49,9 +49,9 @@ When operating in app-only mode, you have the option to use either the `userName
   </TabItem>
   <TabItem value="Application">
 
-  | Resource        | Permissions                      |
-  |-----------------|----------------------------------|
-  | Microsoft Graph | InformationProtectionPolicy.Read |
+  | Resource        | Permissions                          |
+  |-----------------|--------------------------------------|
+  | Microsoft Graph | InformationProtectionPolicy.Read.All |
 
   </TabItem>
 </Tabs>
