addresses code review feedback

--- a/docs/docs/cmd/spo/site/site-alert-remove.mdx
+++ b/docs/docs/cmd/spo/site/site-alert-remove.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # spo site alert remove
 
-Removes an alert from a SharePoint site
+Removes an alert from a SharePoint list
 
 ## Usage
 
@@ -22,7 +22,7 @@ m365 spo site alert remove [options]
 : The ID of the alert.
 
 `-f, --force`
-: Don't prompt for confirmation
+: Don't prompt for confirmation.
 ```
 
 <Global />
