Added minimal permission

--- a/docs/docs/cmd/purview/retentionevent/retentionevent-add.mdx
+++ b/docs/docs/cmd/purview/retentionevent/retentionevent-add.mdx
@@ -47,6 +47,24 @@ This command is based on an API that is currently in preview and is subject to c
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                     |
+  |-----------------|---------------------------------|
+  | Microsoft Graph | RecordsManagement.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                     |
+  |-----------------|---------------------------------|
+  | Microsoft Graph | RecordsManagement.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Create a retention event to start retention at the end of 2022 for all employee documents that have been labeled and have the Asset ID _EmployeeNr1234_.
