--- a/docs/docs/cmd/purview/retentionevent/retentionevent-list.mdx
+++ b/docs/docs/cmd/purview/retentionevent/retentionevent-list.mdx
@@ -16,6 +16,24 @@ m365 purview retentionevent list [options]
 
 <Global />
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                |
+  |-----------------|----------------------------|
+  | Microsoft Graph | RecordsManagement.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                |
+  |-----------------|----------------------------|
+  | Microsoft Graph | RecordsManagement.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get a list of retention events.
