--- a/docs/docs/cmd/purview/retentionevent/retentionevent-get.mdx
+++ b/docs/docs/cmd/purview/retentionevent/retentionevent-get.mdx
@@ -21,6 +21,24 @@ m365 purview retentionevent get [options]
 
 <Global />
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                |
+  |-----------------|----------------------------|
+  | Microsoft Graph | RecordsManagement.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                |
+  |-----------------|----------------------------|
+  | Microsoft Graph | RecordsManagement.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get a retention event by id.
