--- a/docs/docs/cmd/purview/retentionevent/retentionevent-remove.mdx
+++ b/docs/docs/cmd/purview/retentionevent/retentionevent-remove.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # purview retentionevent remove
 
@@ -21,6 +23,24 @@ m365 purview retentionevent remove [options]
 ```
 
 <Global />
+
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                     |
+  |-----------------|---------------------------------|
+  | Microsoft Graph | RecordsManagement.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                     |
+  |-----------------|---------------------------------|
+  | Microsoft Graph | RecordsManagement.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
 
 ## Examples
 
