Added minimal permission

--- a/docs/docs/cmd/purview/retentioneventtype/retentioneventtype-get.mdx
+++ b/docs/docs/cmd/purview/retentioneventtype/retentioneventtype-get.mdx
@@ -29,6 +29,24 @@ This command is based on an API that is currently in preview and is subject to c
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                |
+  |-----------------|----------------------------|
+  | Microsoft Graph | RecordsManagement.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                |
+  |-----------------|----------------------------|
+  | Microsoft Graph | RecordsManagement.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get a retention event type by id.
