--- a/docs/docs/cmd/purview/retentioneventtype/retentioneventtype-set.mdx
+++ b/docs/docs/cmd/purview/retentioneventtype/retentioneventtype-set.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # purview retentioneventtype set
 
@@ -30,9 +32,27 @@ This command is based on a Microsoft Graph API that is currently in preview and 
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                     |
+  |-----------------|---------------------------------|
+  | Microsoft Graph | RecordsManagement.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                     |
+  |-----------------|---------------------------------|
+  | Microsoft Graph | RecordsManagement.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
-Update the description of a retention event type
+Update the description of a retention event type.
 
 ```sh
 m365 purview retentioneventtype set --id c37d695e-d581-4ae9-82a0-9364eba4291e --description 'some extra information'
