--- a/docs/docs/cmd/purview/retentioneventtype/retentioneventtype-add.mdx
+++ b/docs/docs/cmd/purview/retentioneventtype/retentioneventtype-add.mdx
@@ -32,6 +32,24 @@ This command is based on a Microsoft Graph API that is currently in preview and 
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                     |
+  |-----------------|---------------------------------|
+  | Microsoft Graph | RecordsManagement.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                     |
+  |-----------------|---------------------------------|
+  | Microsoft Graph | RecordsManagement.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Create a retention event type *Contract Expiry*.
