--- a/docs/docs/cmd/purview/retentioneventtype/retentioneventtype-list.mdx
+++ b/docs/docs/cmd/purview/retentioneventtype/retentioneventtype-list.mdx
@@ -24,6 +24,24 @@ This command is based on a Microsoft Graph API that is currently in preview and 
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                |
+  |-----------------|----------------------------|
+  | Microsoft Graph | RecordsManagement.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                |
+  |-----------------|----------------------------|
+  | Microsoft Graph | RecordsManagement.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get a list of retention event types.
