--- a/docs/docs/cmd/purview/retentioneventtype/retentioneventtype-remove.mdx
+++ b/docs/docs/cmd/purview/retentioneventtype/retentioneventtype-remove.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # purview retentioneventtype remove
 
@@ -30,9 +32,27 @@ This command is based on a Microsoft Graph API that is currently in preview and 
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                     |
+  |-----------------|---------------------------------|
+  | Microsoft Graph | RecordsManagement.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                     |
+  |-----------------|---------------------------------|
+  | Microsoft Graph | RecordsManagement.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
-Delete a retention event type by id
+Delete a retention event type by id.
 
 ```sh
 m365 purview retentioneventtype remove --id c37d695e-d581-4ae9-82a0-9364eba4291e
