--- a/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-set.mdx
+++ b/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-set.mdx
@@ -29,7 +29,7 @@ m365 spo applicationcustomizer set [options]
 : The new title of the Application Customizer.
 
 `--description [description]`
-: Description for the SPFx app.
+: Description of the application customizer.
 
 `-p, --clientSideComponentProperties  [clientSideComponentProperties]`
 : The Client Side Component properties of the Application Customizer.
