--- a/docs/docs/cmd/entra/approleassignment/approleassignment-add.mdx
+++ b/docs/docs/cmd/entra/approleassignment/approleassignment-add.mdx
@@ -47,18 +47,16 @@ This command can also be used to assign permissions to system or user-assigned m
 <Tabs>
   <TabItem value="Delegated">
 
-  | Resource        | Permissions                     |
-  |-----------------|---------------------------------|
-  | Microsoft Graph | AppRoleAssignment.ReadWrite.All |
-  | Microsoft Graph | Application.Read.All            |
+  | Resource        | Permissions                                           |
+  |-----------------|-------------------------------------------------------|
+  | Microsoft Graph | AppRoleAssignment.ReadWrite.All, Application.Read.All |
 
   </TabItem>
   <TabItem value="Application">
 
-  | Resource        | Permissions                     |
-  |-----------------|---------------------------------|
-  | Microsoft Graph | AppRoleAssignment.ReadWrite.All |
-  | Microsoft Graph | Application.Read.All            |
+  | Resource        | Permissions                                           |
+  |-----------------|-------------------------------------------------------|
+  | Microsoft Graph | AppRoleAssignment.ReadWrite.All, Application.Read.All |
 
   </TabItem>
 </Tabs>
