Added minimal permission

--- a/docs/docs/cmd/entra/pim/pim-role-assignment-add.mdx
+++ b/docs/docs/cmd/entra/pim/pim-role-assignment-add.mdx
@@ -71,6 +71,24 @@ When activating a role for other users, you must be **Privileged Role Administra
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                                |
+  |-----------------|--------------------------------------------|
+  | Microsoft Graph | RoleAssignmentSchedule.ReadWrite.Directory |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                                |
+  |-----------------|--------------------------------------------|
+  | Microsoft Graph | RoleAssignmentSchedule.ReadWrite.Directory |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Request activation of the SharePoint Administrator Entra role assignment for the current user.
