--- a/docs/docs/cmd/entra/pim/pim-role-assignment-eligibility-list.mdx
+++ b/docs/docs/cmd/entra/pim/pim-role-assignment-eligibility-list.mdx
@@ -33,6 +33,24 @@ m365 entra pim role assignment eligibility list [options]
 
 <Global />
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                            |
+  |-----------------|----------------------------------------|
+  | Microsoft Graph | RoleEligibilitySchedule.Read.Directory |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                            |
+  |-----------------|----------------------------------------|
+  | Microsoft Graph | RoleEligibilitySchedule.Read.Directory |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get a list of eligible roles for any user.
