--- a/docs/docs/cmd/entra/pim/pim-role-request-list.mdx
+++ b/docs/docs/cmd/entra/pim/pim-role-request-list.mdx
@@ -39,6 +39,24 @@ m365 entra pim role request list [options]
 
 <Global />
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                                |
+  |-----------------|--------------------------------------------|
+  | Microsoft Graph | RoleAssignmentSchedule.ReadWrite.Directory |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                                |
+  |-----------------|--------------------------------------------|
+  | Microsoft Graph | RoleAssignmentSchedule.ReadWrite.Directory |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get a list of PIM requests for roles.
