--- a/docs/docs/cmd/entra/pim/pim-role-assignment-list.mdx
+++ b/docs/docs/cmd/entra/pim/pim-role-assignment-list.mdx
@@ -36,6 +36,24 @@ m365 entra pim role assignment list [options]
 
 <Global />
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                           |
+  |-----------------|---------------------------------------|
+  | Microsoft Graph | RoleAssignmentSchedule.Read.Directory |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                           |
+  |-----------------|---------------------------------------|
+  | Microsoft Graph | RoleAssignmentSchedule.Read.Directory |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get a list of Entra role assignments.
