--- a/docs/docs/cmd/entra/pim/pim-role-assignment-remove.mdx
+++ b/docs/docs/cmd/entra/pim/pim-role-assignment-remove.mdx
@@ -59,6 +59,24 @@ When deactivating a role for other users, you must be **Privileged Role Administ
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                                |
+  |-----------------|--------------------------------------------|
+  | Microsoft Graph | RoleAssignmentSchedule.ReadWrite.Directory |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                                |
+  |-----------------|--------------------------------------------|
+  | Microsoft Graph | RoleAssignmentSchedule.ReadWrite.Directory |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Request deactivation of the SharePoint Administrator Entra role assignment for the current user.
