Added minimal permission for 'graph schemaextension' and 'graph subscription' commands. Closes #6981

--- a/docs/docs/cmd/graph/schemaextension/schemaextension-add.mdx
+++ b/docs/docs/cmd/graph/schemaextension/schemaextension-add.mdx
@@ -55,6 +55,24 @@ When using the `--properties` option it's possible to enter a JSON string. In Po
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions               |
+  |-----------------|---------------------------|
+  | Microsoft Graph | Application.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                                        |
+  |-----------------|----------------------------------------------------|
+  | Microsoft Graph | Application.ReadWrite.All, Directory.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Create a schema extension
@@ -136,4 +154,3 @@ m365 graph schemaextension add --id contoso_MySchemaExtension --description "My 
 
   </TabItem>
 </Tabs>
-
