--- a/docs/docs/cmd/graph/schemaextension/schemaextension-get.mdx
+++ b/docs/docs/cmd/graph/schemaextension/schemaextension-get.mdx
@@ -26,6 +26,24 @@ m365 graph schemaextension get [options]
 To get properties of a schema extension definition, you have to pass the ID of the schema
 extension.
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions |
+  |-----------------|-------------|
+  | Microsoft Graph | User.Read   |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Gets properties of a schema extension definition with ID domain_myExtension
@@ -101,4 +119,3 @@ m365 graph schemaextension get --id domain_myExtension
 
   </TabItem>
 </Tabs>
-
