--- a/docs/docs/cmd/graph/schemaextension/schemaextension-remove.mdx
+++ b/docs/docs/cmd/graph/schemaextension/schemaextension-remove.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # graph schemaextension remove
 
@@ -26,6 +28,24 @@ m365 graph schemaextension remove [options]
 
 To remove specified schema extension definition, you have to pass the ID of the schema
 extension.
+
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions               |
+  |-----------------|---------------------------|
+  | Microsoft Graph | Application.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                                        |
+  |-----------------|----------------------------------------------------|
+  | Microsoft Graph | Application.ReadWrite.All, Directory.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
 
 ## Examples
 
