--- a/docs/docs/cmd/graph/subscription/subscription-add.mdx
+++ b/docs/docs/cmd/graph/subscription/subscription-add.mdx
@@ -72,39 +72,57 @@ For these subscribers, not setting this property per the timeline would result i
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                                |
+  |-----------------|--------------------------------------------|
+  | Microsoft Graph | AiEnterpriseInteraction.Read, Calendars.Read, Channel.ReadBasic.All, ChannelMessage.Read.All, ChannelSettings.Read.All, Chat.Read, Chat.ReadBasic, Chat.ReadWrite, ChatMember.Read, ChatMember.ReadWrite, Contacts.Read, Files.Read.All, Group.Read.All, Mail.Read, Mail.ReadBasic, OnlineMeetingRecording.Read.All, OnlineMeetingTranscript.Read.All, Presence.Read.All, Schedule.Read.All, Schedule.ReadWrite.All, SecurityEvents.ReadWrite.All, Sites.Read.All, Tasks.ReadWrite, Team.ReadBasic.All, TeamMember.Read.All, TeamSettings.Read.All, User.Read.All, VirtualEvent.Read |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                                |
+  |-----------------|--------------------------------------------|
+  | Microsoft Graph | AiEnterpriseInteraction.Read.All, AiEnterpriseInteraction.Read.User, Calendars.Read, CallRecords.Read.All, Channel.ReadBasic.All, ChannelMessage.Read.All, ChannelMessage.Read.Group, ChannelMember.Read.All, ChannelSettings.Read.All, Chat.Manage.Chat, Chat.Read.All, Chat.Read.WhereInstalled, Chat.ReadBasic.All, Chat.ReadBasic.WhereInstalled, Chat.ReadWrite.All, Chat.ReadWrite.WhereInstalled, ChatMember.Read.All, ChatMember.Read.Chat, ChatMember.Read.WhereInstalled, ChatMember.ReadWrite.All, ChatMember.ReadWrite.WhereInstalled, ChatSettings.Read.Chat, ChatSettings.ReadWrite.Chat, Contacts.Read, Files.Read.All, Group.Read.All, Mail.Read, OnlineMeetingRecording.Read.All, OnlineMeetingTranscript.Read.All, Presence.Read.All, PrintTaskDefinition.ReadWrite.All, Printer.Read.All, Printer.ReadWrite.All, Schedule.Read.All, Schedule.ReadWrite.All, SecurityEvents.ReadWrite.All, Sites.Read.All, Team.ReadBasic.All, TeamMember.Read.All, TeamSettings.Read.All, User.Read.All, VirtualEvent.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
-Create a subscription
+Create a subscription.
 
 ```sh
 m365 graph subscription add --resource "me/mailFolders('Inbox')/messages" --changeTypes "updated" --notificationUrl "https://webhook.azurewebsites.net/api/send/myNotifyClient" --expirationDateTime "2016-11-20T18:23:45.935Z" --clientState "secretClientState"
 ```
 
-Create a subscription on multiple change types and include resource data
+Create a subscription on multiple change types and include resource data.
 
 ```sh
 m365 graph subscription add --resource "me/messages" --changeTypes "updated,deleted" --withResourceData --encryptionCertificate 'Q0xJIGZvciBNaWNyb3NvZnQgMzY1' --encryptionCertificateId 'myCert' --notificationUrl "https://webhook.azurewebsites.net/api/send/myNotifyClient" --expirationDateTime "2016-11-20T18:23:45.935Z" --clientState "secretClientState"
 ```
 
-Create a subscription using the maximum allowed expiration for Group resources
+Create a subscription using the maximum allowed expiration for Group resources.
 
 ```sh
 m365 graph subscription add --resource groups --changeTypes "updated" --notificationUrl "https://webhook.azurewebsites.net/api/send/myNotifyClient" --lifecycleNotificationUrl "https://webhook.azurewebsites.net/api/send/lifecycleNotifications"
 ```
 
-Create a subscription for Event Hub location if you are using Key Vault
+Create a subscription for Event Hub location if you are using Key Vault.
 
 ```sh
 m365 graph subscription add --resource user --changeTypes "created,updated,deleted" --notificationUrl "EventHub:https://azureKeyVaultName.vault.azure.net/secrets/secretName?tenantId=contoso.com"
 ```
 
-Create a subscription for Event Hub location if you are using role-based access control
+Create a subscription for Event Hub location if you are using role-based access control.
 
 ```sh
 m365 graph subscription add --resource user --changeTypes "created,updated,deleted" --notificationUrl "EventHub:https://eventHubNamespace.servicebus.windows.net/eventhubname/eventHubName?tenantId=contoso.com"
 ```
 
-Create a subscription for Event Grid Partner Topic and use TLS 1.3
+Create a subscription for Event Grid Partner Topic and use TLS 1.3.
 
 ```sh
 m365 graph subscription add --resource user --changeTypes "created,updated,deleted" --latestTLSVersion 'v1_3' --notificationUrl "EventGrid:?azuresubscriptionid=8A8A8A8A-4B4B-4C4C-4D4D-12E12E12E12E&resourcegroup=resourceGroupName&partnertopic=partnerTopicName&location=partnerTopicAzureRegionName"
@@ -190,3 +208,6 @@ m365 graph subscription add --resource user --changeTypes "created,updated,delet
   </TabItem>
 </Tabs>
 
+## More information
+
+[https://learn.microsoft.com/en-us/graph/api/subscription-post-subscriptions](https://learn.microsoft.com/en-us/graph/api/subscription-post-subscriptions)
