--- a/docs/docs/cmd/graph/schemaextension/schemaextension-list.mdx
+++ b/docs/docs/cmd/graph/schemaextension/schemaextension-list.mdx
@@ -34,6 +34,24 @@ m365 graph schemaextension list [options]
 
 pageNumber is specified as a 0-based index. A value of 2 returns the third page of items. 
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions |
+  |-----------------|-------------|
+  | Microsoft Graph | User.Read   |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get a list of schemaExtension objects created in the current tenant, that can be InDevelopment, Available, or Deprecated.
@@ -123,4 +141,4 @@ m365 graph schemaextension list --owner 617720dc-85fc-45d7-a187-cee75eaf239e --p
 
 ## More information
 
-[https://developer.microsoft.com/en-us/graph/docs/api-reference/v1.0/api/schemaextension_list](https://developer.microsoft.com/en-us/graph/docs/api-reference/v1.0/api/schemaextension_list)
+[http://learn.microsoft.com/en-us/graph/api/schemaextension-list](http://learn.microsoft.com/en-us/graph/api/schemaextension-list)
