Added minimal permission

--- a/docs/docs/cmd/entra/multitenant/multitenant-add.mdx
+++ b/docs/docs/cmd/entra/multitenant/multitenant-add.mdx
@@ -32,6 +32,24 @@ To use this command you must be at least **Security Administrator**.
 
 :::
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                           |
+  |-----------------|---------------------------------------|
+  | Microsoft Graph | MultiTenantOrganization.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                           |
+  |-----------------|---------------------------------------|
+  | Microsoft Graph | MultiTenantOrganization.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Create a new multitenant organization with display name only.
