--- a/docs/docs/cmd/entra/multitenant/multitenant-remove.mdx
+++ b/docs/docs/cmd/entra/multitenant/multitenant-remove.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # entra multitenant remove
 
@@ -34,6 +36,24 @@ When removing a Multi-Tenant Organization, all associations with other tenants w
 The removing process can take up to 2 hours to complete.
 
 :::
+
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                           |
+  |-----------------|---------------------------------------|
+  | Microsoft Graph | MultiTenantOrganization.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                           |
+  |-----------------|---------------------------------------|
+  | Microsoft Graph | MultiTenantOrganization.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
 
 ## Examples
 
