--- a/docs/docs/cmd/entra/multitenant/multitenant-set.mdx
+++ b/docs/docs/cmd/entra/multitenant/multitenant-set.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # entra multitenant set
 
@@ -29,6 +31,24 @@ m365 entra multitenant set [options]
 To use this command you must be at least **Security Administrator**.
 
 :::
+
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                           |
+  |-----------------|---------------------------------------|
+  | Microsoft Graph | MultiTenantOrganization.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                           |
+  |-----------------|---------------------------------------|
+  | Microsoft Graph | MultiTenantOrganization.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
 
 ## Examples
 
