Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -30,6 +30,19 @@ sidebar_position: 4
 - added minimal permissions for 'entra enterpriseapp' commands [#6927](https://github.com/pnp/cli-microsoft365/issues/6927)
 - added minimal permissions for 'entra m365group' commands [#6944](https://github.com/pnp/cli-microsoft365/issues/6944)
 - added minimal permissions for 'entra groupsetting' commands [#6937](https://github.com/pnp/cli-microsoft365/issues/6937)
+- added minimal permissions for 'entra group member' commands [#6936](https://github.com/pnp/cli-microsoft365/issues/6936)
+- added minimal permissions for 'entra group' commands [#6935](https://github.com/pnp/cli-microsoft365/issues/6935)
+- added minimal permissions for 'entra m365group report' commands [#6943](https://github.com/pnp/cli-microsoft365/issues/6943)
+- added minimal permissions for 'graph directoryextension' commands [#6979](https://github.com/pnp/cli-microsoft365/issues/6979)
+- added minimal permissions for 'purview retentionlabel' commands [#6987](https://github.com/pnp/cli-microsoft365/issues/6987)
+- added minimal permissions for 'purview sensitivitylabel' commands [#6988](https://github.com/pnp/cli-microsoft365/issues/6988)
+- added minimal permissions for 'entra oauth2grant' commands [#6946](https://github.com/pnp/cli-microsoft365/issues/6946)
+- added minimal permissions for 'entra approleassignment' commands [#6926](https://github.com/pnp/cli-microsoft365/issues/6926)
+- added minimal permissions for 'purview retentionevent' commands [#6985](https://github.com/pnp/cli-microsoft365/issues/6985)
+- added minimal permissions for 'purview retentioneventtype' commands [#6986](https://github.com/pnp/cli-microsoft365/issues/6986)
+- added minimal permissions for 'entra pim role' commands [#6948](https://github.com/pnp/cli-microsoft365/issues/6948)
+- added minimal permissions for 'graph schemaextension' and 'graph subscription' commands [#6981](https://github.com/pnp/cli-microsoft365/issues/6981)
+- added minimal permissions for 'entra multitenant' commands [#6945](https://github.com/pnp/cli-microsoft365/issues/6945)
 
 ## [v11.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v11.0.0)
 
