--- a/docs/docs/cmd/outlook/message/message-remove.mdx
+++ b/docs/docs/cmd/outlook/message/message-remove.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import TabItem from '@theme/TabItem';
+import Tabs from '@theme/Tabs';
 
 # outlook message remove
 
@@ -27,6 +29,25 @@ m365 outlook message remove [options]
 ```
 
 <Global />
+
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions               |
+  |-----------------|---------------------------|
+  | Microsoft Graph | Mail.ReadWrite            |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                    |
+  |-----------------|--------------------------------|
+  | Microsoft Graph | Mail.ReadWrite                 |
+
+  </TabItem>
+</Tabs>
 
 ## Remarks
 
