Added permissions section to threat assessment commands documentation

--- a/docs/docs/cmd/purview/threatassessment/threatassessment-add.mdx
+++ b/docs/docs/cmd/purview/threatassessment/threatassessment-add.mdx
@@ -33,6 +33,25 @@ m365 purview threatassessment add [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                    |
+  |-----------------|--------------------------------|
+  | Microsoft Graph | ThreatAssessment.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                    |
+  |-----------------|--------------------------------|
+  | Microsoft Graph | Not supported.                 |
+
+  </TabItem>
+</Tabs>
+
 ## Remarks
 
 :::info
