--- a/docs/docs/cmd/purview/threatassessment/threatassessment-get.mdx
+++ b/docs/docs/cmd/purview/threatassessment/threatassessment-get.mdx
@@ -24,6 +24,25 @@ m365 purview threatassessment get [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                    |
+  |-----------------|--------------------------------|
+  | Microsoft Graph | ThreatAssessment.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                    |
+  |-----------------|--------------------------------|
+  | Microsoft Graph | ThreatAssessment.Read.All      |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get a threat assessment.
