--- a/docs/docs/cmd/purview/threatassessment/threatassessment-list.mdx
+++ b/docs/docs/cmd/purview/threatassessment/threatassessment-list.mdx
@@ -21,6 +21,25 @@ m365 purview threatassessment list [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                    |
+  |-----------------|--------------------------------|
+  | Microsoft Graph | ThreatAssessment.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                    |
+  |-----------------|--------------------------------|
+  | Microsoft Graph | ThreatAssessment.Read.All      |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get a list of threat assessments
