--- a/docs/docs/cmd/outlook/room/room-list.mdx
+++ b/docs/docs/cmd/outlook/room/room-list.mdx
@@ -21,6 +21,25 @@ m365 outlook room list [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions    |
+  |-----------------|----------------|
+  | Microsoft Graph | Place.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions    |
+  |-----------------|----------------|
+  | Microsoft Graph | Place.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get all the rooms.
