Added permissions sections for mail send, mailbox settings get/set, room list, and roomlist list commands.

--- a/docs/docs/cmd/outlook/mail/mail-send.mdx
+++ b/docs/docs/cmd/outlook/mail/mail-send.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # outlook mail send
 
@@ -48,6 +50,25 @@ m365 outlook mail send [options]
 ```
 
 <Global />
+
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                    |
+  |-----------------|--------------------------------|
+  | Microsoft Graph | Mail.Send                      |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                    |
+  |-----------------|--------------------------------|
+  | Microsoft Graph | Mail.Send                      |
+
+  </TabItem>
+</Tabs>
 
 ## Remarks
 
