--- a/docs/docs/cmd/outlook/mailbox/mailbox-settings-get.mdx
+++ b/docs/docs/cmd/outlook/mailbox/mailbox-settings-get.mdx
@@ -24,6 +24,25 @@ m365 outlook mailbox settings get [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                    |
+  |-----------------|--------------------------------|
+  | Microsoft Graph | MailboxSettings.Read           |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                    |
+  |-----------------|--------------------------------|
+  | Microsoft Graph | MailboxSettings.Read           |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get mailbox settings of the signed-in user
