--- a/docs/docs/cmd/outlook/mailbox/mailbox-settings-set.mdx
+++ b/docs/docs/cmd/outlook/mailbox/mailbox-settings-set.mdx
@@ -75,6 +75,26 @@ m365 outlook mailbox settings set [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                    |
+  |-----------------|--------------------------------|
+  | Microsoft Graph | MailboxSettings.ReadWrite      |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                    |
+  |-----------------|--------------------------------|
+  | Microsoft Graph | MailboxSettings.ReadWrite      |
+
+  </TabItem>
+</Tabs>
+
+
 ## Examples
 
 Update date, time format and time zone of the signed-in user.
