--- a/docs/docs/cmd/outlook/roomlist/roomlist-list.mdx
+++ b/docs/docs/cmd/outlook/roomlist/roomlist-list.mdx
@@ -16,6 +16,25 @@ m365 outlook roomlist list [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                    |
+  |-----------------|--------------------------------|
+  | Microsoft Graph | Place.Read.All                 |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                    |
+  |-----------------|--------------------------------|
+  | Microsoft Graph | Place.Read.All                 |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get all roomlists in your tenant.
